--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,30 @@
 alembic==1.8.1
 attrs==22.1.0
 blinker==1.5
+certifi==2022.9.24
+charset-normalizer==2.1.1
 click==8.1.3
 exceptiongroup==1.0.1
 Flask==2.2.2
 Flask-Mail==0.9.1
 Flask-Migrate==4.0.0
 Flask-SQLAlchemy==3.0.2
+idna==3.4
 iniconfig==1.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.1
+oauthlib==3.2.2
 packaging==21.3
 pluggy==1.0.0
 pyparsing==3.0.9
 pytest==7.2.0
 python-dotenv==0.21.0
+requests==2.28.1
+requests-oauthlib==1.3.1
 SQLAlchemy==1.4.44
 tomli==2.0.1
+tweepy==4.12.1
+urllib3==1.26.12
 Werkzeug==2.2.2
