--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,10 @@
-version: "1"
+version: "3"
 services:
   web:
     build: .
     ports:
-      - "80:8000"
-    depends_on:
-      - "db"
-    command: ["./wait-for-mysql.sh", "db:5432", "--", "python", "-m", "flask", "run"]
-  db:
-    image: maria-db
-    
+      - "8000:5000"
+    env_file:
+    - ".env"
+    volumes:
+    - .:/app
