external db updates

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,28 @@
 version: "3"
 services:
+  db:
+    image: mariadb
+    restart: always
+    volumes:
+      - mariadb_data:/var/lib/mysql
+    environment:
+      - MYSQL_ROOT_PASSWORD=example
+      - MYSQL_PASSWORD=example
+      - MYSQL_USER=flask_docker
+      - MYSQL_DATABASE=flask_docker
+    # command: mariadb --host 0.0.0.0 -P 3306 --user root -p example
+    
   web:
     build: .
     ports:
-      - "8000:5000"
+      - 8000:5000
+      - 3306:3306
     env_file:
-    - ".env"
+      - .env
     volumes:
-    - .:/app
+      - .:/app
+    depends_on:
+      - db
+
+volumes:
+  mariadb_data: {}
