--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ exceptiongroup==1.0.1
 Flask==2.2.2
 Flask-Mail==0.9.1
 Flask-Migrate==4.0.0
+Flask-MySQL==1.5.2
 Flask-SQLAlchemy==3.0.2
 idna==3.4
 iniconfig==1.1.1
@@ -16,10 +17,13 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 lxml==4.9.1
 Mako==1.2.4
+mariadb==1.1.5.post3
 MarkupSafe==2.1.1
 oauthlib==3.2.2
 packaging==21.3
 pluggy==1.0.0
+protobuf==3.20.1
+PyMySQL==1.0.2
 pyparsing==3.0.9
 pytest==7.2.0
 python-dotenv==0.21.0
